--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore npm cruft.
+.node_modules
+package-lock.json
