--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: WowMovie!
+  title: WowVideo!
   overview: MyText
   release_date: 2017-01-11
   inventory: 4
